# stm32-experiments

./: .gdbinit  Cargo.toml  README.md  rust32.raw
.cargo/: config.toml
examples/: i2c-experiments.rs  mpu6050.rs  ssd1306.rs  ttp229_manual.rs  ttp229_spi.rs
src/: lib.rs  main.rs  mpu.rs  shape3d.rs
